--- a/boards/shields/roBa/roBa_L.conf
+++ b/boards/shields/roBa/roBa_L.conf
@@ -7,3 +7,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 CONFIG_ZMK_POINTING=y
+
+# ADD eager debboucing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
