--- a/build.yaml
+++ b/build.yaml
@@ -19,9 +19,9 @@
 ---
 include:
  - board: seeeduino_xiao_ble
-   shield: roBa_R rgbled_adapter // 追記
+   shield: roBa_R rgbled_adapter  # <-- new entry
    snippet: studio-rpc-usb-uart
  - board: seeeduino_xiao_ble
-   shield: roBa_L rgbled_adapter // 追記
+   shield: roBa_L rgbled_adapter  # <-- new entry
  - board: seeeduino_xiao_ble
    shield: settings_reset
